Scrollmagic controller,scene,element,durayion,hook,and for each loop added

--- a/index.html
+++ b/index.html
@@ -2,14 +2,58 @@
 <html>
 <head>
 	<title>Title</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Open+Sans+Condensed:300|PT+Sans|Raleway" rel="stylesheet">
 	<meta name="viewport" content="width=device-width , initial-scale=1.0">
-	<script src="https://use.fontawesome.com/896f812e64.js"></script>
+	<!-- <script src="https://use.fontawesome.com/896f812e64.js"></script> -->
 </head>
 <body>
 
+	<div id="intro">
+            <div class="content">
+                <img src="img/img_scrollmagic-logo.png" />
+                <h1>ScrollMagic Basics</h1>
+                <p>Short and sharp ScrollMagic demos, teaching you the basics of ScrollMagic API.</p>
+            </div>
+        </div>
+
+        <div id="main" class="main-container">
+
+            <div id="project01" class="project">
+                <img src="img/img_project01-icon.svg" />
+                <h2>Project Title</h2>
+                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed.</p>
+            </div>
+
+            <div id="project02" class="project">
+                <img src="img/img_project02-icon.svg" />
+                <h2>Project Title</h2>
+                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed.</p>
+            </div>
+
+            <div id="project03" class="project">
+                <img src="img/img_project03-icon.svg" />
+                <h2>Project Title</h2>
+                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed.</p>
+            </div>
+
+        </div> <!-- #main-container -->
+
+        <div class="footer-container">
+            <footer class="wrapper">
+                <h3>| Animate responsibly |</h3>
+            </footer>
+        </div>
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- SCROLLMAGIC -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+<!-- scrollmagic plugin to help debugging --> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
