--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
                 <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed.</p>
             </div>
 
+            <div class="bcg-parallax">
+                <div class="bcg"></div>
+                <div class="content-wrapper">
+                    <h1>Lorem ipsum dolor.</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, error assumenda recusandae.</p>
+                </div>
+            </div>
+
             <div id="project02" class="project">
                 <img src="img/img_project02-icon.svg" />
                 <h2>Project Title</h2>
@@ -49,8 +57,14 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+<!-- INCLUDING GREENSOCK TWEENMAX -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+
+
 <!-- SCROLLMAGIC -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+<!-- SCROLLMAGICS'S  GREENSOCK PLUGIN -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
 <!-- scrollmagic plugin to help debugging --> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 
